first-pod/myproject.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypod-deployment
  namespace: myproject
  labels:
    app: mypod
spec:
  replicas: 6
  selector:
    matchLabels:
      app: mypod
  template:
    metadata:
      name: mypod
      namespace: myproject
      labels:
        app: mypod
        version: v2
    spec:
      restartPolicy: Always # default value 
      containers:
      - name: whoami
        image: containous/whoami
        ports:
          - containerPort: 80
        # qa 
        resources:  
          requests:
            memory: 64M
            cpu: 100m
          limits:
            memory: 128M
            cpu: 200m
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
