first-pod/myproject.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypod-service
  namespace: myproject
spec:
  type: NodePort
  selector:
    app: mypod
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 31000
