first-pod/myproject.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypod-ingress
  namespace: myproject
  labels:
    app: mypod
spec:
  rules:
  - host: mypod.kube
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mypod-service
            port: 
              number: 80
